<resources>
    <string name="app_name">house_rental</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_house_rentals">HomeToLet</string>
    <string name="tenant">Tenant</string>
    <string name="landlord">Landlord</string>
    <string name="welcome_image">welcome image</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="hey_welcome_back">Hey, Welcome Back</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_account">Create account</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="user_type">User Type</string>
    <string name="select_user_type">Select user type</string>
    <string name="first_name">First Name</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_email">Verify Email</string>
    <string name="resend_instruction">resend instruction</string>
    <string name="check_your_spam_filter_or">Check your spam filter, or</string>
    <string name="did_not_receive_the_email">Did not receive the email?</string>
    <string name="we_have_a_sent_an_otp_to_your_email_for_confirmation">We have a sent an OTP to your email for confirmation.</string>
    <string name="check_your_mail">Check your mail</string>
    <string name="upload_house">Upload House</string>
    <string name="home">Home</string>
    <string name="APP_NAME">House2Let</string>
    <string name="enter_house_address">Enter house address</string>
    <string name="address">Address</string>
    <string name="enter_title_of_your_house">Enter title of your house</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="enter_house_description">Enter house description</string>
    <string name="enter_house_price">Enter house price</string>
    <string name="price">Price (&#8358;)</string>
    <string name="image_s">Image(s)</string>
    <string name="upload">Upload</string>
    <string name="log_out">Log out</string>
    <string name="welcome_tenant">Welcome Tenant</string>
    <string name="select_image_s">Select image(s)</string>
    <string name="menu">MENU</string>
    <string name="houses">Houses</string>
    <string name="settings">Settings</string>
    <string name="view_house_s">View House(s)</string>
    <string name="enter_the_email_associated_with_your_account_and_we_ll_send_an_email_with_instruction_to_reset_your_password">Enter the email associated with your account and we\'ll send an email with instruction to reset your password</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_amount">Enter amount</string>
    <string name="amount">Amount</string>
    <string name="reason">Reason</string>
    <string name="requests">Requests</string>
    <string name="login_authentication">Login Authentication</string>
    <string name="verify_login">Verify Login</string>
    <string-array name="user_type">
        <item>Tenant</item>
        <item>Landlord</item>
    </string-array>
</resources>