<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/tenantLandingFragment_home_link"
            android:title="@string/home"
            android:icon="@drawable/ic_baseline_home_24"
            />
        <item
            android:id="@+id/tenantLandingFragment_view_houses_link"
            android:title="@string/view_house_s"
            android:icon="@drawable/ic_baseline_add_home_24"
            />
        <item
            android:id="@+id/tenantLandingFragment_settings_link"
            android:title="@string/settings"
            android:icon="@drawable/ic_baseline_settings_24"
            />
        <item
            android:id="@+id/tenantLandingFragment_logout_link"
            android:title="@string/log_out"
            android:icon="@drawable/ic_baseline_west_24"
            />
    </group>
</menu>