<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/landlordLandingFragment_home_link"
            android:title="@string/home"
            android:icon="@drawable/ic_baseline_home_24"
            />
        <item
            android:id="@+id/landlordLandingFragment_upload_house_link"
            android:title="@string/upload_house"
            android:icon="@drawable/ic_baseline_add_home_24"
            />
        <item
            android:id="@+id/landlordLandingFragment_view_requests_link"
            android:title="View Request(s)"
            android:icon="@drawable/ic_baseline_checklist_24"
            />
        <item
            android:id="@+id/landlordLandingFragment_logout_link"
            android:title="@string/log_out"
            android:icon="@drawable/ic_baseline_west_24"
            />
    </group>
</menu>