<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".commons.ui.login.LoginFragment"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/loginFragment_welcome_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/hey_welcome_back"
            android:textColor="@color/black"
            android:textFontWeight="800"
            android:textSize="24sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/loginFragment_error_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:padding="10dp">

            <TextView
                android:id="@+id/loginFragment_error_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_regular"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:text=""/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/loginFragment_email_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manrope_regular"
                    android:text="@string/email"
                    android:textColor="@color/textPrimaryColor"
                    android:textFontWeight="400"
                    android:textSize="14sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/loginFragment_email_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    app:boxCornerRadiusBottomEnd="0dp"
                    app:boxCornerRadiusBottomStart="0dp"
                    app:boxCornerRadiusTopEnd="0dp"
                    app:boxCornerRadiusTopStart="0dp"
                    app:boxStrokeColor="@color/themePrimaryColor"
                    app:helperTextTextColor="@color/textPrimaryColor"
                    app:hintEnabled="false">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/loginFragment_email_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manrope_regular"
                        android:hint="@string/enter_your_email_address"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:padding="10dp"
                        android:textFontWeight="400"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/loginFragment_password_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manrope_regular"
                    android:text="@string/password"
                    android:textColor="@color/textPrimaryColor"
                    android:textFontWeight="400"
                    android:textSize="14sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirm_password_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:boxCornerRadiusBottomEnd="0dp"
                    app:boxCornerRadiusBottomStart="0dp"
                    app:boxCornerRadiusTopEnd="0dp"
                    app:boxCornerRadiusTopStart="0dp"
                    app:boxStrokeColor="@color/themePrimaryColor"
                    app:helperTextTextColor="@color/textPrimaryColor"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginFragment_password_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:drawableEnd="@drawable/ic_eye_closed"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:lines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/loginFragment_forgot_password_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manrope_regular"
                    android:text="forgot password ?"
                    android:layout_gravity="end"
                    android:textColor="@color/themePrimaryColor"
                    android:textSize="14sp"
                    android:paddingVertical="10dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/loginFragment_submit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/border"
                    android:backgroundTint="@color/themePrimaryColor"
                    android:clickable="true"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="@color/textSecondaryColor" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/loginFragment_No_account_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manrope_regular"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/black"
                    android:textFontWeight="400"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/loginFragment_signup_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:fontFamily="@font/manrope_regular"
                    android:text="@string/sign_up"
                    android:textColor="@color/themePrimaryColor"
                    android:textFontWeight="800"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>