<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".commons.ui.verify_login.VerifyLoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle"
                    android:padding="20dp"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseline_security_24"/>

                </FrameLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginVertical="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_authentication"
                        android:fontFamily="@font/manrope_bold"
                        android:textSize="20sp"
                        android:textColor="@color/textPrimaryColor"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/we_have_a_sent_an_otp_to_your_email_for_confirmation"
                        android:fontFamily="@font/manrope_regular"
                        android:textSize="14sp"
                        android:textColor="@color/textPrimaryColor"/>


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/verifyLoginFragment_error_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/verifyLoginFragment_error_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manrope_regular"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:text=""/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/verifyLoginFragment_otp_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    app:boxCornerRadiusBottomEnd="0dp"
                    app:boxCornerRadiusBottomStart="0dp"
                    app:boxCornerRadiusTopEnd="0dp"
                    app:boxCornerRadiusTopStart="0dp"
                    app:boxStrokeColor="@color/themePrimaryColor"
                    app:helperTextTextColor="@color/textPrimaryColor"
                    app:hintEnabled="false">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/verifyLoginFragment_otp_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manrope_regular"
                        android:hint="@string/enter_otp"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:padding="10dp"
                        android:textFontWeight="400"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/verifyLoginFragment_submit_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/border"
                        android:backgroundTint="@color/themePrimaryColor"
                        android:clickable="true"
                        android:text="@string/verify_login"
                        android:textAllCaps="true"
                        android:textColor="@color/textSecondaryColor" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>